src/test/ui/rfc-2008-non-exhaustive/uninhabited/indirect_match_with_exhaustive_patterns.stderr
error[E0004]: non-exhaustive patterns: type `IndirectUninhabitedEnum` is non-empty
  --> $DIR/indirect_match_with_exhaustive_patterns.rs:23:11
   |
LL |     match x {}
   |           ^
   |
   = note: the matched value is of type `IndirectUninhabitedEnum`
help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms
   |
LL ~     match x {
LL +         _ => todo!(),
LL ~     }
   |

error[E0004]: non-exhaustive patterns: type `IndirectUninhabitedStruct` is non-empty
  --> $DIR/indirect_match_with_exhaustive_patterns.rs:27:11
   |
LL |     match x {}
   |           ^
   |
   = note: the matched value is of type `IndirectUninhabitedStruct`
help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms
   |
LL ~     match x {
LL +         _ => todo!(),
LL ~     }
   |

error[E0004]: non-exhaustive patterns: type `IndirectUninhabitedTupleStruct` is non-empty
  --> $DIR/indirect_match_with_exhaustive_patterns.rs:31:11
   |
LL |     match x {}
   |           ^
   |
   = note: the matched value is of type `IndirectUninhabitedTupleStruct`
help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms
   |
LL ~     match x {
LL +         _ => todo!(),
LL ~     }
   |

error[E0004]: non-exhaustive patterns: type `IndirectUninhabitedVariants` is non-empty
  --> $DIR/indirect_match_with_exhaustive_patterns.rs:37:11
   |
LL |     match x {}
   |           ^
   |
   = note: the matched value is of type `IndirectUninhabitedVariants`
help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms
   |
LL ~     match x {
LL +         _ => todo!(),
LL ~     }
   |

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0004`.
